Sample-App/nginx/nginx-sts-persistent.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  #  namespace: dbha01
  name: nginx-pv-test
  labels:
    app: nginx
spec:
  serviceName: nginx
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: pv-storage
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: pv-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: pkssc
        resources:
          requests:
            storage: 5Gi
