Sample-App/nginx/nginx.yaml
apiVersion: apps/v1 #k8s 1.16
kind: Deployment
metadata:
  labels:
    run: simplehome
  name: simplehome-deploy
#  namespace: mycluster02
spec:
  replicas: 3
  selector:
    matchLabels:
      run: simplehome
  template:
    metadata:
      labels:
        run: simplehome
    spec:
      containers:
        - image: nginx
          name: simplehome
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: simplehome
  name: simplehome-nginx
#  namespace: mycluster02
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    run: simplehome
  type: LoadBalancer
#  type: NodePort
