Sample-App/nginx/nginx-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-my-test
spec:
  backend:
    serviceName: simplehome-nginx
    servicePort: 80
